all test files are ready
